kubernetes/apps/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: default
spec:
  parentRefs:
    - name: homelab
  hostnames:
    - n8n.nicholassaw.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          namespace: n8n
          port: 5678
